--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      h1 {
-        text-align: center;
-        color: plum;
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>
-      helloooo honey
+      helloooo honey!!🍯
     </h1>
+    <script src="script.js"></script>
   </body>
 </html>
