--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1>
       helloooo honey!!🍯
     </h1>
+    <form>
+      <input type="email" placeholder="Enter your email" />
+      <input type="password" placeholder="Enter your password" />
+      <input type="submit" placeholder="Login" />
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
